--- a/main.html
+++ b/main.html
@@ -8,6 +8,13 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h2>What is the capital of India?</h2>
+	<input class="ans" type="radio" name="ans">
+	<label for="ans">New Delhi</label><br>
+	<input class="ans" type="radio" name="ans">
+	<label for="ans">Mumbai</label>
+	<blockquote class="quote">New Delhi is the capital of India and an administrative district of NCT Delhi.</blockquote>
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
