--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
 	<label for="ans">New Delhi</label><br>
 	<input class="ans" type="radio" name="ans">
 	<label for="ans">Mumbai</label>
-	<blockquote class="quote" cite:"https://en.wikipedia.org/wiki/New_Delhi">New Delhi is the capital of India and an administrative district of NCT Delhi.</blockquote>
+	<blockquote class="quote" cite="https://en.wikipedia.org/wiki/New_Delhi">New Delhi is the capital of India and an administrative district of NCT Delhi.</blockquote>
 	
     <script type="text/javascript" src="./script.js">
 </script>
